overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -60,10 +60,11 @@
   /* Base Styles */
   * {
     @apply border-border;
-    /* overflow-x: hidden */
+  
   }
 
   body {
     @apply bg-background text-foreground;
-   
+    overflow-x: hidden;
+    width:100%;
   }
